infras/k8s/file-manifests/file-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file
  template:
    metadata:
      labels:
        app: file
    spec:
      imagePullSecrets:
        - name: authenticate-registry
      hostAliases:
        - ip: "192.168.73.101"
          hostnames:
          - "gitlab.taskscheduler.com"
      containers:
        - name: file
          image: longle2003/file
---
apiVersion: v1
kind: Service
metadata:
  name: file-srv
spec:
  selector:
    app: file
  ports:
    - name: file
      protocol: TCP
      port: 4008
      targetPort: 4008
