infras/k8s/file-manifests/file-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    # konghq.com/protocols: htps
    konghq.com/methods: GET,POST,PUT,DELETE
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/files/
            pathType: Prefix
            backend:
              service:
                name: file-srv
                port: 
                  number: 4008
